[package]
name = "warp_lambda"
description = "A super simple crate to let you use [warp filters](https://github.com/seanmonstar/warp) with [aws lambda runtime](https://github.com/awslabs/aws-lambda-rust-runtime)"
license = "MIT"
readme = "README.md"
repository = "https://github.com/aslamplr/warp_lambda"
homepage = "https://github.com/aslamplr/warp_lambda#warp_lambda"
version = "0.1.3"
authors = ["Aslam Ahammed <aslamplr@gmail.com>"]
edition = "2018"
keywords = ["lambda", "aws-lambda", "warp", "serverless", "warp-lambda"]
categories = ["web-programming", "web-programming::http-server"]

[badges]
maintenance = { status = "experimental" }

[dependencies]
# wait for new release (>0.4.1) that includes this change
# https://github.com/awslabs/aws-lambda-rust-runtime/pull/356
lambda_http = { git = "https://github.com/awslabs/aws-lambda-rust-runtime" }
mime = "0.3"
once_cell = "1.7"
warp = "0.3.1"
tower = "0.4.10"
thiserror = "1.0"
tracing = "0.1"
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0"
tokio = { version = "1.13", features = [ "full" ]}
tracing-subscriber = "0.2"
